@@ -18,8 +18,6 @@
 
 * Clean up non-MacOS stuff, confirm paths for Java 5 are set up right in scripts
 * Verify all apps still work after hibernate change, etc.
-* upgrade commons-betwixt to 0.8.  Something wrong in Configurator.save(),
-  the hack to write the class name doesn't work.
 
 * update htmlparser to 1.6
 * update smack toolkit, can't confirm license on old copy
