@@ -5,6 +5,8 @@ Version 2.5.6:
 ----------------------
 * Added warning message in ToGo application if Galleon isn't able to contact
   TiVo (usually means TiVo HTTPS server is hung)
+* Some miscellaneous code cleanups
+* Upgraded to commons-betwixt-0.8
   
 Version 2.5.5:
 ----------------------
